CVS HEAD:
 * new translation:
  * British English
 * updated translations:
  * catalan
 * language fixes and polishing (English)

Version 0.8.10:
 * user interface tweaks
 * updated translations:
  * catalan
  * french
  * german
  * latin
  * russian
  * swedish
  * updated manpages
 * updated images for footpad and dwarvish sentinel
 * language fixes and polishing (English)
 * scenario revisions for 'The Heir to the Throne' campaign:
  * Dwarven Doors & Siege of Elensefar- Decreased the AI's gold
  * Bay of Pearls- Added an extra keep square on EASY
  * Sceptre of Fire- Reduced that AI's income on HARD
  * Norther Winter- Updated the map to use the snow tiles
  * tweaks to several maps
  * difficulty balancing for most scenarios
 * scenario revisions for 'Son of the Black Eye' campaign:
  * End of Peace
 * scenario revisions for 'The Eastern Invasion' campaign:
  * Escape Tunnel
 * scenario revisions for 'The Rise of Wesnoth' campaign:
  * reduced the AI's gold in 'A Harrowing Escape'
  * allowed the AI to initially recruit scouts in several scenarios
  * altered / fixed the recruitment pattern in several scenarios
  * tweaks to 'The Plan' & 'Epilogue' (both non-playable)
 * really removed ZoC from lv0 units this time
 * fixed editor to work with zipios support enabled
 * fixed zipios support to honor path to data given on command-line
 * fixed zipios support crashes when running from CVS
 * new cmd line option --fps to display frames/second refresh in game
 * modified how damage is calculated (RATE)
 * fixed bug which caused unnecessary waits during unit movement;
   should make unit movement much smoother
 * fixed poison not being cured when the unit had too much HP (#11565)
 * fixed bugs when replacing player with observer in mp (#11231)
 * fixed several pathfinding bugs (#11769)
 * fixed cave random map generation, especially Scepter of Fire (#11748)
 * fixed dialogs shown at end of MP game (#11830)